web/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

/************** Modal **************/

.ReactModal__Overlay {
  transition: all 300ms ease-in-out;
  opacity: 0;
  transform: scale(0.95);
}

.ReactModal__Overlay--after-open {
  opacity: 1;
  transform: scale(1);
}

.ReactModal__Overlay--before-close {
  opacity: 0;
  transform: scale(0.95);
}

/************** Scrollbar **************/

body {
  overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: --tw-bg-zinc-900 --tw-bg-zinc-500;
}

::-webkit-scrollbar {
  @apply w-4;
}

/* Track */
::-webkit-scrollbar-track {
  @apply bg-zinc-900;
}

/* Handle */
::-webkit-scrollbar-thumb {
  @apply bg-zinc-500 w-2 rounded-full border-4 border-solid border-transparent bg-clip-content;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  @apply bg-zinc-600;
}

/* Handle on active */
::-webkit-scrollbar-thumb:active {
  @apply bg-zinc-700;
}


/************** Animations **************/

@keyframes bounce2 {
    25% {
        transform-origin: center bottom;
        transform: translateY(-12%) rotateZ(-4deg);
        animation-timing-function: cubic-bezier(0.8,0,1,1);
    }
    0%, 50%, 100% {
        transform: none;
        animation-timing-function: cubic-bezier(0,0,0.2,1);
    }
    75% {
      transform-origin: center bottom;
      transform: translateY(-12%) rotateZ(4deg);
      animation-timing-function: cubic-bezier(0.8,0,1,1);
  }
}

